# embedded-linux

./: README.md
exercise_1/: exercise_1.docx
exercise_2/: Exercise 2.docx  ~$ercise 2.docx
exercise_3/3a/: mains  makefile  randomNum.c
exercise_3/3b/: -nostartfile  main  main.c  makefile  randomNum.h
exercise_4/: CMakeLists.txt
exercise_4/src/: main.c  randomNum.c
exercise_5/: Buildroot lab 1.docx  ~$ildroot lab 1.docx
